--- a/style.css
+++ b/style.css
@@ -28,16 +28,25 @@ body {
   display: none;
 }
 
+.left-side .toggler {
+  display: none;
+}
+
+.left-side .hamburger {
+  display: none;
+}
+
+.left-side .menu {
+  display: none;
+}
+
 #nav .images {
   margin-right: 14px;
 }
 
 #nav .left-side {
+  display: flex;
   margin: auto 0;
-}
-
-#nav svg {
-  display: none;
 }
 
 #nav .item:hover {
@@ -197,7 +206,7 @@ body {
   color: #5f6368;
 }
 
-#footer .unknown {
+#footer .unknown-list {
   display: none;
 }
 
@@ -237,6 +246,7 @@ body {
 
 #animated-button li {
   list-style-type: none;
+  width: auto;
 }
 
 #animated-button ul {
@@ -251,48 +261,40 @@ body {
 @media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
   body {
     font-family: Roboto, HelveticaNeue, Arial, sans-serif;
+    width: 375px;
   }
 
   #nav {
     display: flex;
     justify-content: space-between;
     margin-top: 4px;
-    padding-right: 5px;
+    padding-right: 4px;
   }
 
   #nav .nav-link {
-    font-size: 13px;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
     padding-right: 8px;
   }
 
   #nav .left-side {
     display: flex;
     flex-direction: row;
-    padding-top: 5px;
+    padding-top: 7px;
+    padding-left: 30px;
   }
 
   #nav .left-side .all {
     display: block;
     margin-top: 6px;
     color: #757575;
-    margin-left: 20px;
     text-transform: uppercase;
     color: #4285f4;
     border-bottom: 2px solid #4285f4;
     text-align: center;
-    padding: 0 6px;
+    padding: 0 7px;
     padding-bottom: 15px;
-  }
-
-  #nav .left-side svg {
-    display: block;
-    margin-left: 15px;
-  }
-
-  #nav .left-side a {
-    margin-left: 20px;
+    margin-left: 27px;
     text-align: center;
     font-size: 12px;
   }
@@ -302,9 +304,136 @@ body {
   }
 
   #nav .images {
-    margin-right: 20px;
     margin-top: 6px;
+    margin-left: 18px;
     color: #757575;
+    font-size: 12px;
+  }
+
+  .left-side .toggler {
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 3;
+    cursor: pointer;
+    width: 15px;
+    height: 15px;
+    opacity: 0;
+  }
+
+  .left-side .hamburger {
+    position: absolute;
+    top: 8px;
+    left: 10px;
+    z-index: 1;
+    width: 17px;
+    height: 15px;
+    padding: 10px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+  }
+
+  .left-side .hamburger > div {
+    position: relative;
+    width: 100%;
+    height: 1.5px;
+    background-color: #757575;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+  }
+
+  .left-side .hamburger > div:before,
+  .left-side .hamburger > div:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    width: 100%;
+    height: 1.5px;
+    background: inherit;
+  }
+
+  .left-side .hamburger > div:after {
+    top: 5px;
+  }
+
+  .menu-logo {
+    width: 90px;
+    margin-left: 15px;
+  }
+
+  .menu-container {
+    padding-top: 10px;
+  }
+
+  .left-side .menu {
+    display: inline-block;
+    background-color: #fff;
+    height: 100%;
+    font-size: 16px;
+    left: -250px;
+    outline: none;
+    overflow-y: scroll;
+    padding-top: 16px;
+    position: fixed;
+    top: 0;
+    transition: 0.5s;
+    width: 250px;
+    z-index: 2;
+  }
+  .left-side .toggler {
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  .left-side .toggler:checked ~ .menu {
+    left: 0px;
+  }
+
+  #overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    cursor: pointer;
+  }
+
+  .left-side .toggler:checked ~ #overlay {
+    display: block;
+  }
+
+  .menu a {
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.54);
+    height: 48px;
+    line-height: 20px;
+    width: 100%;
+    vertical-align: middle;
+    text-decoration: none;
+  }
+
+  .menu-hr {
+    background: #e1e1e1;
+    height: 0;
+    opacity: 0.4;
+  }
+
+  .menu .description-img {
+    padding: 0 15px;
+    margin-bottom: 3px;
+    width: 24px;
+    vertical-align: middle;
   }
 
   #nav #bars img {
@@ -318,13 +447,14 @@ body {
     margin-right: 0;
   }
 
-  #middle #logo #google-logo {
-    width: 160px;
+  #middle {
+    margin-top: 65px;
+    text-align: center;
+    height: 812px;
   }
 
-  #middle {
-    margin-top: 70px;
-    text-align: center;
+  #middle #logo #google-logo {
+    width: 158px;
   }
 
   #search-form {
@@ -333,7 +463,7 @@ body {
 
   #search-bar-container {
     width: 355px;
-    height: 35px;
+    height: 37px;
     border: 1px solid #dfe1e5;
     border-radius: 25px;
     margin: 0 auto;
@@ -366,6 +496,18 @@ body {
     display: none;
   }
 
+  #iphone-auto-complete {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    background: #fff;
+    z-index: 989;
+    border-radius: 0;
+    overflow: auto;
+  }
+
   .button {
     display: none;
   }
@@ -375,19 +517,341 @@ body {
     font-size: 13px;
   }
 
-  #lang-div a{
+  #lang-div a {
     padding-left: 10px;
   }
 
   #footer {
     display: none;
   }
-
-
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
-  /* Styles */
+  body {
+    font-family: Roboto, HelveticaNeue, Arial, sans-serif;
+    width: 100%;
+  }
+
+  #nav {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4px;
+    padding-right: 4px;
+  }
+
+  #nav .nav-link {
+    text-transform: uppercase;
+    font-weight: 700;
+    padding-right: 8px;
+  }
+
+  #nav .left-side {
+    display: flex;
+    flex-direction: row;
+    padding-top: 7px;
+    padding-left: 30px;
+  }
+
+  #nav .left-side .all {
+    display: block;
+    margin-top: 6px;
+    color: #757575;
+    text-transform: uppercase;
+    color: #4285f4;
+    border-bottom: 2px solid #4285f4;
+    text-align: center;
+    padding: 0 7px;
+    padding-bottom: 15px;
+    margin-left: 27px;
+    text-align: center;
+    font-size: 12px;
+  }
+
+  #nav .gmail {
+    display: none;
+  }
+
+  #nav .images {
+    margin-top: 6px;
+    margin-left: 18px;
+    color: #757575;
+    font-size: 12px;
+  }
+
+  .left-side .toggler {
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 3;
+    cursor: pointer;
+    width: 15px;
+    height: 15px;
+    opacity: 0;
+  }
+
+  .left-side .hamburger {
+    position: absolute;
+    top: 8px;
+    left: 10px;
+    z-index: 1;
+    width: 17px;
+    height: 15px;
+    padding: 10px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+  }
+
+  .left-side .hamburger > div {
+    position: relative;
+    width: 100%;
+    height: 1.5px;
+    background-color: #757575;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+  }
+
+  .left-side .hamburger > div:before,
+  .left-side .hamburger > div:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    width: 100%;
+    height: 1.5px;
+    background: inherit;
+  }
+
+  .left-side .hamburger > div:after {
+    top: 5px;
+  }
+
+  .menu-logo {
+    width: 90px;
+    margin-left: 15px;
+  }
+
+  .menu-container {
+    padding-top: 10px;
+  }
+
+  .left-side .menu {
+    display: inline-block;
+    background-color: #fff;
+    height: 100%;
+    font-size: 16px;
+    left: -250px;
+    outline: none;
+    overflow-y: scroll;
+    padding-top: 16px;
+    position: fixed;
+    top: 0;
+    transition: 0.5s;
+    width: 250px;
+    z-index: 2;
+  }
+  .left-side .toggler {
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  .left-side .toggler:checked ~ .menu {
+    left: 0px;
+  }
+
+  #overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    cursor: pointer;
+  }
+
+  .left-side .toggler:checked ~ #overlay {
+    display: block;
+  }
+
+  .menu a {
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.54);
+    height: 48px;
+    line-height: 20px;
+    width: 100%;
+    vertical-align: middle;
+    text-decoration: none;
+  }
+
+  hr {
+    background: #e1e1e1;
+    height: 0;
+    opacity: 0.4;
+  }
+
+  .menu .description-img {
+    padding: 0 15px;
+    margin-bottom: 3px;
+    width: 24px;
+    vertical-align: middle;
+  }
+
+  #nav #bars img {
+    width: 16px;
+    height: 16px;
+  }
+
+  #nav #avatar-img {
+    border-radius: 50%;
+    width: 32px;
+    margin-right: 0;
+  }
+
+  #middle {
+    margin-top: 45px;
+    text-align: center;
+    height: 485px;
+  }
+
+  #middle #logo #google-logo {
+    width: 158px;
+  }
+
+  #search-form {
+    margin-top: 24px;
+  }
+
+  #search-bar-container {
+    width: 730px;
+    height: 37px;
+    border: 1px solid #dfe1e5;
+    border-radius: 25px;
+    margin: 0 auto;
+    z-index: 1;
+  }
+
+  #search-bar {
+    height: 25px;
+    outline: 0;
+    padding: 0;
+    margin-top: 6px;
+    width: 670px;
+    font-size: 18px;
+    border: none;
+    float: left;
+    color: rgba(0, 0, 0, 0.87);
+  }
+
+  #search-icon {
+    margin-top: 4px;
+    padding-left: 6px;
+    float: left;
+  }
+
+  #search-img {
+    width: 25px;
+  }
+
+  #mic-icon {
+    display: none;
+  }
+
+  .button {
+    display: none;
+  }
+
+  #lang-div {
+    margin-top: 15px;
+    font-size: 13px;
+  }
+
+  #lang-div a {
+    padding-left: 10px;
+  }
+
+  #footer {
+    position: static;
+    flex-direction: column-reverse;
+    height: 146px;
+    bottom: 0;
+  }
+
+  #footer ul {
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  #footer .top-list {
+    border-top: 1px solid #e4e4e4;
+    padding-top: 10px;
+  }
+
+  #footer .end-list {
+    padding-bottom: 10px;
+    flex-direction: row;
+  }
+
+  #footer ul li a {
+    font-size: 13px;
+  }
+
+  #footer ul li {
+    margin: 0;
+    padding-right: 14px;
+    padding-left: 14px;
+  }
+
+  #footer ul .hsw {
+    display: none;
+  }
+
+  #footer ul li .dot {
+    border-radius: 100%;
+    display: inline-block;
+    height: 10px;
+    vertical-align: middle;
+    width: 10px;
+    background: #9e9e9e;
+    margin-top: 2px;
+    margin-right: 5px;
+  }
+
+  #footer ul li .dash {
+    padding: 0 2px;
+    font-size: 12px;
+  }
+
+  #footer .unknown-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 56px;
+    border-top: 1px solid #e4e4e4;
+    text-align: justify;
+  }
+
+  #footer ul li .bold-text {
+    font-size: 13px;
+    font-weight: bold;
+    color: #222;
+  }
+
+  #footer .unknown {
+    display: flex;
+    color: #5f6368;
+  }
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
