--- a/style.css
+++ b/style.css
@@ -558,26 +558,48 @@ body {
   }
 
   .history-list {
-    padding: 10px 3px 11px 5px;
-    display: flex;
-    align-items: center;
-    min-width: 0;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
   }
 
   .history-list-item {
-    padding: 10px 3px 11px 5px;
     width: 100%;
+    display: flex;
     list-style-type: none;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-}
+    padding: 10px 3px 15px 5px;
+    min-width: 0;
+    font-size: 16px;
   }
 
   .list-icon {
-    height: 24px;
-    width: 24px;
+    display: flex;
+    justify-content: flex-start;
+    width: 30px;
+    padding-left: 6px;
+    padding-right: 7px;
   }
 
+  .far {
+    color: #9e9e9e;
+    font-size: 21px;
+    font-weight: 400;
+  }
+
+  .remove {
+    position: fixed;
+    right: 15px;
+    font-family: arial, sans-serif;
+    color: #80868b;
+    font-size: 27px;
+    line-height: 25px;
+    padding: 0 5px;
+    width: 20px;
+    cursor: pointer;
+    align-self: center;
+  }
 
   .button {
     display: none;
