--- a/style.css
+++ b/style.css
@@ -82,8 +82,12 @@ body {
   text-align: center;
 }
 
+#middle #logo {
+  height: 120px;
+}
+
 #search-form {
-  margin-top: 27px;
+  margin-top: 0px;
 }
 
 #search-bar-container {
@@ -138,31 +142,31 @@ body {
 }
 
 #auto-complete-search-bar {
-    border-radius: 25px 25px 0 0;
-    border-color: rgba(223,225,229,0);
-    box-shadow: 0 1px 6px rgba(32,33,36,.28);
-    width: 580px;
-    height: 44px;
-    margin: 0 auto;
-    z-index: 1;
+  border-radius: 25px 25px 0 0;
+  border-color: rgba(223, 225, 229, 0);
+  box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
+  width: 580px;
+  height: 44px;
+  margin: 0 auto;
+  z-index: 1;
 }
 
 #device-auto-complete {
-  box-shadow: 0 4px 6px rgba(32,33,36,.28);
+  box-shadow: 0 4px 6px rgba(32, 33, 36, 0.28);
   position: relative;
   width: 580px;
   margin: 0 auto;
   padding-bottom: 10px;
   z-index: 999;
   border-radius: 0 0 25px 25px;
-  overflow: auto; 
+  overflow: auto;
 }
 
 .auto-complete-container {
   display: none;
 }
 
-.top-container  {
+.top-container {
   display: none;
 }
 
@@ -213,17 +217,17 @@ b {
 }
 
 .remove-text {
-    display: block;
-    position: absolute;
-    right: 55px;
-    font-family: arial, sans-serif;
-    color: #80868b;
-    line-height: 25px;
-    padding: 0 5px;
-    width: 20px;
-    cursor: pointer;
-    align-self: center;
-    font-size: 14px;
+  display: block;
+  position: absolute;
+  right: 55px;
+  font-family: arial, sans-serif;
+  color: #80868b;
+  line-height: 25px;
+  padding: 0 5px;
+  width: 20px;
+  cursor: pointer;
+  align-self: center;
+  font-size: 14px;
 }
 
 .button {
@@ -623,7 +627,7 @@ b {
     display: none;
   }
 
-  .top-container  {
+  .top-container {
     margin-top: 5px;
     display: flex;
     height: 45px;
