--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   text-decoration: none;
   color: #000000de;
   font-size: 13px;
+  z-index: 2;
 }
 
 #nav .gmail {
@@ -57,6 +58,8 @@ body {
 #nav #bars {
   opacity: 0.55;
   margin-right: 10px;
+  cursor: pointer;
+  z-index: 3;
 }
 
 #nav #bars img {
@@ -75,6 +78,8 @@ body {
   width: 32px;
   margin-right: 14px;
   margin-top: 5px;
+  cursor: pointer;
+  z-index: 3;
 }
 
 #middle {
@@ -116,6 +121,7 @@ body {
   border: none;
   float: left;
   color: rgba(0, 0, 0, 0.87);
+  z-index: 2;
 }
 
 #search-icon {
@@ -228,6 +234,19 @@ b {
   cursor: pointer;
   align-self: center;
   font-size: 14px;
+}
+
+#desktop-backward {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: transparent;
+  z-index: 1;
 }
 
 .button {
@@ -503,6 +522,10 @@ b {
 
   .left-side .toggler:checked ~ .menu {
     left: 0px;
+  }
+
+  #desktop-backward {
+    display: none;
   }
 
   #overlay {
