--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
   margin-top: 0px;
 }
 
-#search-bar-container {
+.search-bar-container {
   width: 580px;
   height: 44px;
   border: 1px solid #dfe1e5;
@@ -104,7 +104,7 @@ body {
   z-index: 1;
 }
 
-#search-bar-container:hover {
+.search-bar-container:hover {
   box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
   border-color: rgba(223, 225, 229, 0);
 }
@@ -143,11 +143,11 @@ body {
   width: 13px;
 }
 
-#auto-complete-container {
+.auto-complete-container {
   display: none;
 }
 
-#auto-complete-search-bar {
+.auto-complete-search-bar {
   border-radius: 25px 25px 0 0;
   border-color: rgba(223, 225, 229, 0);
   box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
@@ -157,7 +157,7 @@ body {
   z-index: 1;
 }
 
-#device-auto-complete {
+.device-auto-complete {
   box-shadow: 0 4px 6px rgba(32, 33, 36, 0.28);
   position: relative;
   width: 580px;
@@ -600,7 +600,7 @@ b {
     margin-top: 24px;
   }
 
-  #search-bar-container {
+  .search-bar-container {
     width: 355px;
     height: 37px;
     border: 1px solid #dfe1e5;
@@ -635,7 +635,7 @@ b {
     display: none;
   }
 
-  #device-auto-complete {
+  .device-auto-complete {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -647,7 +647,7 @@ b {
     overflow: auto;
   }
 
-  #auto-complete-search-bar {
+  .auto-complete-search-bar {
     display: none;
   }
 
@@ -977,7 +977,7 @@ b {
     margin-top: 24px;
   }
 
-  #search-bar-container {
+  .search-bar-container {
     width: 730px;
     height: 37px;
     border: 1px solid #dfe1e5;
